--- a/rule/Clash/myrule.ini
+++ b/rule/Clash/myrule.ini
@@ -1,34 +1,34 @@
 [custom]
 enable_rule_generator=true
 custom_proxy_group=Proxies`select`.*
-custom_proxy_group=国内网站`select`[]DIRECT`[]Proxies`[]🚀 HK`[]🚀 SG`[]🚀 TW`[]🚀 JP`[]🚀 US`[]🚀 Game
-custom_proxy_group=AsianTV`select`[]DIRECT`[]Proxies`[]🚀 HK`[]🚀 SG`[]🚀 TW`[]🚀 JP`[]🚀 US`[]🚀 Game
-custom_proxy_group=Apple`select`[]DIRECT`[]Proxies`[]🚀 HK`[]🚀 SG`[]🚀 TW`[]🚀 JP`[]🚀 US`[]🚀 Game
-custom_proxy_group=Apple TV`select`[]DIRECT`[]Proxies`[]🚀 HK`[]🚀 SG`[]🚀 TW`[]🚀 JP`[]🚀 US`[]🚀 Game
-custom_proxy_group=Spotify`select`[]DIRECT`[]Proxies`[]🚀 HK`[]🚀 SG`[]🚀 TW`[]🚀 JP`[]🚀 US`[]🚀 Game
-custom_proxy_group=Bing`select`[]DIRECT`[]Proxies`[]🚀 HK`[]🚀 SG`[]🚀 TW`[]🚀 JP`[]🚀 US`[]🚀 Game
-custom_proxy_group=Pikpak`select`[]DIRECT`[]Proxies`[]🚀 HK`[]🚀 SG`[]🚀 TW`[]🚀 JP`[]🚀 US`[]🚀 Game
-custom_proxy_group=steam`select`[]DIRECT`[]Proxies`[]🚀 HK`[]🚀 SG`[]🚀 TW`[]🚀 JP`[]🚀 US`[]🚀 Game
-custom_proxy_group=xbox`select`[]DIRECT`[]Proxies`[]🚀 HK`[]🚀 SG`[]🚀 TW`[]🚀 JP`[]🚀 US`[]🚀 Game
-custom_proxy_group=树状图`select`[]DIRECT`[]Proxies`[]🚀 HK`[]🚀 SG`[]🚀 TW`[]🚀 JP`[]🚀 US`[]🚀 Game
-custom_proxy_group=Microsoft`select`[]DIRECT`[]Proxies`[]🚀 HK`[]🚀 SG`[]🚀 TW`[]🚀 JP`[]🚀 US`[]🚀 Game
-custom_proxy_group=ChatGPT`select`[]Proxies`[]DIRECT`[]🚀 HK`[]🚀 SG`[]🚀 TW`[]🚀 JP`[]🚀 US`[]🚀 Game
-custom_proxy_group=Bilibili`select`[]DIRECT`[]Proxies`[]🚀 HK`[]🚀 TW
-custom_proxy_group=Bahamut`select`[]Proxies`[]DIRECT`[]🚀 HK`[]🚀 SG`[]🚀 TW`[]🚀 JP`[]🚀 US`[]🚀 Game
-custom_proxy_group=YouTube`select`[]Proxies`[]DIRECT`[]🚀 HK`[]🚀 SG`[]🚀 TW`[]🚀 JP`[]🚀 US`[]🚀 Game
-custom_proxy_group=Netflix`select`[]Proxies`[]DIRECT`[]🚀 HK`[]🚀 SG`[]🚀 TW`[]🚀 JP`[]🚀 US`[]🚀 Game
-custom_proxy_group=Disney Plus`select`[]Proxies`[]DIRECT`[]🚀 HK`[]🚀 SG`[]🚀 TW`[]🚀 JP`[]🚀 US`[]🚀 Game
-custom_proxy_group=Telegram`select`[]Proxies`[]DIRECT`[]🚀 HK`[]🚀 SG`[]🚀 TW`[]🚀 JP`[]🚀 US`[]🚀 Game
-custom_proxy_group=国际网站`select`[]Proxies`[]DIRECT`[]🚀 HK`[]🚀 SG`[]🚀 TW`[]🚀 JP`[]🚀 US`[]🚀 Game
-custom_proxy_group=GlobalTV`select`[]Proxies`[]DIRECT`[]🚀 HK`[]🚀 SG`[]🚀 TW`[]🚀 JP`[]🚀 US`[]🚀 Game
-custom_proxy_group=Others`select`[]Proxies`[]DIRECT`[]🚀 HK`[]🚀 SG`[]🚀 TW`[]🚀 JP`[]🚀 US`[]🚀 Game
+custom_proxy_group=国内网站`select`[]DIRECT`[]Proxies`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
+custom_proxy_group=AsianTV`select`[]DIRECT`[]Proxies`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
+custom_proxy_group=Apple`select`[]DIRECT`[]Proxies`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
+custom_proxy_group=Apple TV`select`[]DIRECT`[]Proxies`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
+custom_proxy_group=Spotify`select`[]DIRECT`[]Proxies`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
+custom_proxy_group=Bing`select`[]DIRECT`[]Proxies`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
+custom_proxy_group=Pikpak`select`[]DIRECT`[]Proxies`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
+custom_proxy_group=steam`select`[]DIRECT`[]Proxies`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
+custom_proxy_group=xbox`select`[]DIRECT`[]Proxies`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
+custom_proxy_group=树状图`select`[]DIRECT`[]Proxies`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
+custom_proxy_group=Microsoft`select`[]DIRECT`[]Proxies`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
+custom_proxy_group=ChatGPT`select`[]Proxies`[]DIRECT`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
+custom_proxy_group=Bilibili`select`[]DIRECT`[]Proxies`[]HK`[]TW
+custom_proxy_group=Bahamut`select`[]Proxies`[]DIRECT`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
+custom_proxy_group=YouTube`select`[]Proxies`[]DIRECT`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
+custom_proxy_group=Netflix`select`[]Proxies`[]DIRECT`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
+custom_proxy_group=Disney Plus`select`[]Proxies`[]DIRECT`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
+custom_proxy_group=Telegram`select`[]Proxies`[]DIRECT`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
+custom_proxy_group=国际网站`select`[]Proxies`[]DIRECT`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
+custom_proxy_group=GlobalTV`select`[]Proxies`[]DIRECT`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
+custom_proxy_group=Others`select`[]Proxies`[]DIRECT`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
 
-custom_proxy_group=🚀 HK`url-test`港`http://www.gstatic.com/generate_204`600
-custom_proxy_group=🚀 SG`url-test`新加坡|狮城`http://www.gstatic.com/generate_204`600
-custom_proxy_group=🚀 TW`url-test`台|新北|彰化`http://www.gstatic.com/generate_204`600
-custom_proxy_group=🚀 JP`url-test`日((?!用).)+|东京|大阪|埼玉`http://www.gstatic.com/generate_204`600
-custom_proxy_group=🚀 US`url-test`美|洛杉矶|硅谷|达拉斯|费利蒙|凤凰城|芝加哥|圣何塞|西雅图`http://www.gstatic.com/generate_204`600
-custom_proxy_group=🚀 Game`url-test`Limit`http://www.gstatic.com/generate_204`600
+custom_proxy_group=HK`url-test`港`http://www.gstatic.com/generate_204`600
+custom_proxy_group=SG`url-test`新加坡|狮城`http://www.gstatic.com/generate_204`600
+custom_proxy_group=TW`url-test`台|新北|彰化`http://www.gstatic.com/generate_204`600
+custom_proxy_group=JP`url-test`日((?!用).)+|东京|大阪|埼玉`http://www.gstatic.com/generate_204`600
+custom_proxy_group=US`url-test`美|洛杉矶|硅谷|达拉斯|费利蒙|凤凰城|芝加哥|圣何塞|西雅图`http://www.gstatic.com/generate_204`600
+custom_proxy_group=Game`url-test`Limit`http://www.gstatic.com/generate_204`600
 
 ruleset=DIRECT,https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Special.list
 ruleset=!!import:https://gist.githubusercontent.com/vernesong/4c27ed54ab2a5fedd9c4011389ac11ed/raw/lhie1_globaltv.list
