--- a/rule/Clash/ywh.ini
+++ b/rule/Clash/ywh.ini
@@ -22,12 +22,12 @@ custom_proxy_group=Telegram`select`[]Proxies`[]DIRECT`[]HK`[]SG`[]TW`[]JP`[]US`[
 custom_proxy_group=国际网站`select`[]Proxies`[]DIRECT`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
 custom_proxy_group=GlobalTV`select`[]Proxies`[]DIRECT`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
 custom_proxy_group=Others`select`[]Proxies`[]DIRECT`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
-custom_proxy_group=HK`url-test`港`http://www.gstatic.com/generate_204`600
+custom_proxy_group=HK`url-test`港^Limit`http://www.gstatic.com/generate_204`600
 custom_proxy_group=SG`url-test`新加坡|狮城`http://www.gstatic.com/generate_204`600
 custom_proxy_group=TW`url-test`台|新北|彰化`http://www.gstatic.com/generate_204`600
 custom_proxy_group=JP`url-test`日((?!用).)+|东京|大阪|埼玉`http://www.gstatic.com/generate_204`600
 custom_proxy_group=US`url-test`美|洛杉矶|硅谷|达拉斯|费利蒙|凤凰城|芝加哥|圣何塞|西雅图`http://www.gstatic.com/generate_204`600
-custom_proxy_group=Game`url-test`美|洛杉矶|硅谷|达拉斯|费利蒙|凤凰城|芝加哥|圣何塞|西雅图`http://www.gstatic.com/generate_204`600
+custom_proxy_group=Game`url-test`Limit`http://www.gstatic.com/generate_204`600
 
 ruleset=DIRECT,https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Special.list
 ruleset=!!import:https://gist.githubusercontent.com/vernesong/4c27ed54ab2a5fedd9c4011389ac11ed/raw/lhie1_globaltv.list
