--- a/rule/Clash/ywh.ini
+++ b/rule/Clash/ywh.ini
@@ -22,7 +22,7 @@ custom_proxy_group=Telegram`select`[]Proxies`[]DIRECT`[]HK`[]SG`[]TW`[]JP`[]US`[
 custom_proxy_group=国际网站`select`[]Proxies`[]DIRECT`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
 custom_proxy_group=GlobalTV`select`[]Proxies`[]DIRECT`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
 custom_proxy_group=Others`select`[]Proxies`[]DIRECT`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
-custom_proxy_group=HK`url-test`港^Limit`http://www.gstatic.com/generate_204`600
+custom_proxy_group=HK`url-test`(港)^(Limit)`http://www.gstatic.com/generate_204`600
 custom_proxy_group=SG`url-test`新加坡|狮城`http://www.gstatic.com/generate_204`600
 custom_proxy_group=TW`url-test`台|新北|彰化`http://www.gstatic.com/generate_204`600
 custom_proxy_group=JP`url-test`日((?!用).)+|东京|大阪|埼玉`http://www.gstatic.com/generate_204`600
