--- a/rule/Clash/ywh.ini
+++ b/rule/Clash/ywh.ini
@@ -22,10 +22,13 @@ custom_proxy_group=Telegram`select`[]Proxies`[]DIRECT`[]HK`[]SG`[]TW`[]JP`[]US`[
 custom_proxy_group=国际网站`select`[]Proxies`[]DIRECT`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
 custom_proxy_group=GlobalTV`select`[]Proxies`[]DIRECT`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
 custom_proxy_group=Others`select`[]Proxies`[]DIRECT`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
-custom_proxy_group=HK`url-test`港`http://www.gstatic.com/generate_204`600
-custom_proxy_group=SG`url-test`新加坡|狮城`http://www.gstatic.com/generate_204`600
+custom_proxy_group=HK`url-test`香港0`http://www.gstatic.com/generate_204`600
+custom_proxy_group=SG`url-test`新加坡0`http://www.gstatic.com/generate_204`600
 custom_proxy_group=TW`url-test`台|新北|彰化`http://www.gstatic.com/generate_204`600
-custom_proxy_group=JP`url-test`日((?!用).)+|东京|大阪|埼玉`http://www.gstatic.com/generate_204`600
+custom_proxy_group=JP`url-test`日本0`http://www.gstatic.com/generate_204`600
+custom_proxy_group=HK|0.5x`url-test`香港B`http://www.gstatic.com/generate_204`600
+custom_proxy_group=SG|0.5x`url-test`新加坡B`http://www.gstatic.com/generate_204`600
+custom_proxy_group=JP|0.5x`url-test`日本B`http://www.gstatic.com/generate_204`600
 custom_proxy_group=US`url-test`美|洛杉矶|硅谷|达拉斯|费利蒙|凤凰城|芝加哥|圣何塞|西雅图`http://www.gstatic.com/generate_204`600
 custom_proxy_group=Game`url-test`Limit`http://www.gstatic.com/generate_204`600
 
