--- a/rule/Clash/ywh.ini
+++ b/rule/Clash/ywh.ini
@@ -1,27 +1,27 @@
 [custom]
 enable_rule_generator=true
 custom_proxy_group=Proxies`select`.*
-custom_proxy_group=国内网站`select`[]DIRECT`[]Proxies`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
-custom_proxy_group=AsianTV`select`[]DIRECT`[]Proxies`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
-custom_proxy_group=Apple`select`[]DIRECT`[]Proxies`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
-custom_proxy_group=Apple TV`select`[]DIRECT`[]Proxies`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
-custom_proxy_group=Spotify`select`[]DIRECT`[]Proxies`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
-custom_proxy_group=Bing`select`[]DIRECT`[]Proxies`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
-custom_proxy_group=Pikpak`select`[]DIRECT`[]Proxies`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
-custom_proxy_group=steam`select`[]DIRECT`[]Proxies`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
-custom_proxy_group=xbox`select`[]DIRECT`[]Proxies`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
-custom_proxy_group=树状图`select`[]DIRECT`[]Proxies`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
-custom_proxy_group=Microsoft`select`[]DIRECT`[]Proxies`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
-custom_proxy_group=ChatGPT`select`[]Proxies`[]DIRECT`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
-custom_proxy_group=Bilibili`select`[]DIRECT`[]Proxies`[]HK`[]TW
-custom_proxy_group=Bahamut`select`[]Proxies`[]DIRECT`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
-custom_proxy_group=YouTube`select`[]Proxies`[]DIRECT`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
-custom_proxy_group=Netflix`select`[]Proxies`[]DIRECT`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
-custom_proxy_group=Disney Plus`select`[]Proxies`[]DIRECT`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
-custom_proxy_group=Telegram`select`[]Proxies`[]DIRECT`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
-custom_proxy_group=国际网站`select`[]Proxies`[]DIRECT`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
-custom_proxy_group=GlobalTV`select`[]Proxies`[]DIRECT`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
-custom_proxy_group=Others`select`[]Proxies`[]DIRECT`[]HK`[]SG`[]TW`[]JP`[]US`[]Game
+custom_proxy_group=国内网站`select`[]DIRECT`[]Proxies`[]HK`[]SG`[]TW`[]JP`[]US`[]HK|0.5x`[]SG|0.5x`[]JP|0.5x`[]Game
+custom_proxy_group=AsianTV`select`[]DIRECT`[]Proxies`[]HK`[]SG`[]TW`[]JP`[]US`[]HK|0.5x`[]SG|0.5x`[]JP|0.5x`[]Game
+custom_proxy_group=Apple`select`[]DIRECT`[]Proxies`[]HK`[]SG`[]TW`[]JP`[]US`[]HK|0.5x`[]SG|0.5x`[]JP|0.5x`[]Game
+custom_proxy_group=Apple TV`select`[]DIRECT`[]Proxies`[]HK`[]SG`[]TW`[]JP`[]US`[]HK|0.5x`[]SG|0.5x`[]JP|0.5x`[]Game
+custom_proxy_group=Spotify`select`[]DIRECT`[]Proxies`[]HK`[]SG`[]TW`[]JP`[]US`[]HK|0.5x`[]SG|0.5x`[]JP|0.5x`[]Game
+custom_proxy_group=Bing`select`[]DIRECT`[]Proxies`[]HK`[]SG`[]TW`[]JP`[]US`[]HK|0.5x`[]SG|0.5x`[]JP|0.5x`[]Game
+custom_proxy_group=Pikpak`select`[]DIRECT`[]Proxies`[]HK`[]SG`[]TW`[]JP`[]US`[]HK|0.5x`[]SG|0.5x`[]JP|0.5x`[]Game
+custom_proxy_group=steam`select`[]DIRECT`[]Proxies`[]HK`[]SG`[]TW`[]JP`[]US`[]HK|0.5x`[]SG|0.5x`[]JP|0.5x`[]Game
+custom_proxy_group=xbox`select`[]DIRECT`[]Proxies`[]HK`[]SG`[]TW`[]JP`[]US`[]HK|0.5x`[]SG|0.5x`[]JP|0.5x`[]Game
+custom_proxy_group=树状图`select`[]DIRECT`[]Proxies`[]HK`[]SG`[]TW`[]JP`[]US`[]HK|0.5x`[]SG|0.5x`[]JP|0.5x`[]Game
+custom_proxy_group=Microsoft`select`[]DIRECT`[]Proxies`[]HK`[]SG`[]TW`[]JP`[]US`[]HK|0.5x`[]SG|0.5x`[]JP|0.5x`[]Game
+custom_proxy_group=ChatGPT`select`[]Proxies`[]DIRECT`[]HK`[]SG`[]TW`[]JP`[]US`[]HK|0.5x`[]SG|0.5x`[]JP|0.5x`[]Game
+custom_proxy_group=Bilibili`select`[]DIRECT`[]Proxies`[]HK`[]TW`[]HK|0.5x
+custom_proxy_group=Bahamut`select`[]Proxies`[]DIRECT`[]HK`[]SG`[]TW`[]JP`[]US`[]HK|0.5x`[]SG|0.5x`[]JP|0.5x`[]Game
+custom_proxy_group=YouTube`select`[]Proxies`[]DIRECT`[]HK`[]SG`[]TW`[]JP`[]US`[]HK|0.5x`[]SG|0.5x`[]JP|0.5x`[]Game
+custom_proxy_group=Netflix`select`[]Proxies`[]DIRECT`[]HK`[]SG`[]TW`[]JP`[]US`[]HK|0.5x`[]SG|0.5x`[]JP|0.5x`[]Game
+custom_proxy_group=Disney Plus`select`[]Proxies`[]DIRECT`[]HK`[]SG`[]TW`[]JP`[]US`[]HK|0.5x`[]SG|0.5x`[]JP|0.5x`[]Game
+custom_proxy_group=Telegram`select`[]Proxies`[]DIRECT`[]HK`[]SG`[]TW`[]JP`[]US`[]HK|0.5x`[]SG|0.5x`[]JP|0.5x`[]Game
+custom_proxy_group=国际网站`select`[]Proxies`[]DIRECT`[]HK`[]SG`[]TW`[]JP`[]US`[]HK|0.5x`[]SG|0.5x`[]JP|0.5x`[]Game
+custom_proxy_group=GlobalTV`select`[]Proxies`[]DIRECT`[]HK`[]SG`[]TW`[]JP`[]US`[]HK|0.5x`[]SG|0.5x`[]JP|0.5x`[]Game
+custom_proxy_group=Others`select`[]Proxies`[]DIRECT`[]HK`[]SG`[]TW`[]JP`[]US`[]HK|0.5x`[]SG|0.5x`[]JP|0.5x`[]Game
 custom_proxy_group=HK`url-test`香港0`http://www.gstatic.com/generate_204`600
 custom_proxy_group=SG`url-test`新加坡0`http://www.gstatic.com/generate_204`600
 custom_proxy_group=TW`url-test`台|新北|彰化`http://www.gstatic.com/generate_204`600
