--- a/rule/Clash/ywh.ini
+++ b/rule/Clash/ywh.ini
@@ -1,36 +1,35 @@
 [custom]
 enable_rule_generator=true
 custom_proxy_group=Proxies`select`.*
-custom_proxy_group=国内网站`select`[]DIRECT`[]Proxies`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]香港0.5x`[]新加坡0.5x`[]日本0.5x`[]Game
-custom_proxy_group=AsianTV`select`[]DIRECT`[]Proxies`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]香港0.5x`[]新加坡0.5x`[]日本0.5x`[]Game
-custom_proxy_group=Apple`select`[]DIRECT`[]Proxies`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]香港0.5x`[]新加坡0.5x`[]日本0.5x`[]Game
-custom_proxy_group=Apple TV`select`[]DIRECT`[]Proxies`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]香港0.5x`[]新加坡0.5x`[]日本0.5x`[]Game
-custom_proxy_group=Spotify`select`[]DIRECT`[]Proxies`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]香港0.5x`[]新加坡0.5x`[]日本0.5x`[]Game
-custom_proxy_group=Bing`select`[]DIRECT`[]Proxies`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]香港0.5x`[]新加坡0.5x`[]日本0.5x`[]Game
-custom_proxy_group=Pikpak`select`[]DIRECT`[]Proxies`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]香港0.5x`[]新加坡0.5x`[]日本0.5x`[]Game
-custom_proxy_group=steam`select`[]DIRECT`[]Proxies`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]香港0.5x`[]新加坡0.5x`[]日本0.5x`[]Game
-custom_proxy_group=xbox`select`[]DIRECT`[]Proxies`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]香港0.5x`[]新加坡0.5x`[]日本0.5x`[]Game
-custom_proxy_group=树状图`select`[]DIRECT`[]Proxies`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]香港0.5x`[]新加坡0.5x`[]日本0.5x`[]Game
-custom_proxy_group=Microsoft`select`[]DIRECT`[]Proxies`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]香港0.5x`[]新加坡0.5x`[]日本0.5x`[]Game
-custom_proxy_group=ChatGPT`select`[]Proxies`[]DIRECT`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]香港0.5x`[]新加坡0.5x`[]日本0.5x`[]Game
-custom_proxy_group=Bilibili`select`[]DIRECT`[]Proxies`[]香港`[]台湾`[]香港0.5x
-custom_proxy_group=Bahamut`select`[]Proxies`[]DIRECT`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]香港0.5x`[]新加坡0.5x`[]日本0.5x`[]Game
-custom_proxy_group=YouTube`select`[]Proxies`[]DIRECT`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]香港0.5x`[]新加坡0.5x`[]日本0.5x`[]Game
-custom_proxy_group=Netflix`select`[]Proxies`[]DIRECT`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]香港0.5x`[]新加坡0.5x`[]日本0.5x`[]Game
-custom_proxy_group=Disney Plus`select`[]Proxies`[]DIRECT`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]香港0.5x`[]新加坡0.5x`[]日本0.5x`[]Game
-custom_proxy_group=Telegram`select`[]Proxies`[]DIRECT`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]香港0.5x`[]新加坡0.5x`[]日本0.5x`[]Game
-custom_proxy_group=国际网站`select`[]Proxies`[]DIRECT`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]香港0.5x`[]新加坡0.5x`[]日本0.5x`[]Game
-custom_proxy_group=GlobalTV`select`[]Proxies`[]DIRECT`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]香港0.5x`[]新加坡0.5x`[]日本0.5x`[]Game
-custom_proxy_group=Others`select`[]Proxies`[]DIRECT`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]香港0.5x`[]新加坡0.5x`[]日本0.5x`[]Game
+custom_proxy_group=国内网站`select`[]DIRECT`[]Proxies`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]特殊节点
+custom_proxy_group=AsianTV`select`[]DIRECT`[]Proxies`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]特殊节点
+custom_proxy_group=Apple`select`[]DIRECT`[]Proxies`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]特殊节点
+custom_proxy_group=Apple TV`select`[]DIRECT`[]Proxies`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]特殊节点
+custom_proxy_group=Spotify`select`[]DIRECT`[]Proxies`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]特殊节点
+custom_proxy_group=Bing`select`[]DIRECT`[]Proxies`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]特殊节点
+custom_proxy_group=Pikpak`select`[]DIRECT`[]Proxies`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]特殊节点
+custom_proxy_group=steam`select`[]DIRECT`[]Proxies`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]特殊节点
+custom_proxy_group=xbox`select`[]DIRECT`[]Proxies`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]特殊节点
+custom_proxy_group=树状图`select`[]DIRECT`[]Proxies`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]特殊节点
+custom_proxy_group=Microsoft`select`[]DIRECT`[]Proxies`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]特殊节点
+custom_proxy_group=ChatGPT`select`[]美国`[]Proxies`[]DIRECT`[]香港`[]新加坡`[]台湾`[]日本`[]特殊节点
+custom_proxy_group=Bilibili`select`[]DIRECT`[]Proxies`[]香港`[]台湾`[]特殊节点
+custom_proxy_group=Bahamut`select`[]台湾`[]Proxies`[]DIRECT`[]香港`[]新加坡`[]日本`[]美国`[]特殊节点
+custom_proxy_group=YouTube`select`[]日本`[]Proxies`[]DIRECT`[]香港`[]新加坡`[]台湾`[]美国`[]特殊节点
+custom_proxy_group=Netflix`select`[]日本`[]Proxies`[]DIRECT`[]香港`[]新加坡`[]台湾`[]美国`[]特殊节点
+custom_proxy_group=Disney Plus`select`[]日本`[]Proxies`[]DIRECT`[]香港`[]新加坡`[]台湾`[]美国`[]特殊节点
+custom_proxy_group=Telegram`select`[]日本`[]Proxies`[]DIRECT`[]香港`[]新加坡`[]台湾`[]美国`[]特殊节点
+custom_proxy_group=国际网站`select`[]日本`[]Proxies`[]DIRECT`[]香港`[]新加坡`[]台湾`[]美国`[]特殊节点
+custom_proxy_group=GlobalTV`select`[]日本`[]Proxies`[]DIRECT`[]香港`[]新加坡`[]台湾`[]美国`[]特殊节点
+custom_proxy_group=Others`select`[]DIRECT`[]Proxies`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]特殊节点
 custom_proxy_group=香港`url-test`香港0`http://www.gstatic.com/generate_204`600
 custom_proxy_group=新加坡`url-test`新加坡0`http://www.gstatic.com/generate_204`600
 custom_proxy_group=台湾`url-test`台|新北|彰化`http://www.gstatic.com/generate_204`600
 custom_proxy_group=日本`url-test`日本0`http://www.gstatic.com/generate_204`600
-custom_proxy_group=香港0.5x`url-test`香港B`http://www.gstatic.com/generate_204`600
-custom_proxy_group=新加坡0.5x`url-test`新加坡B`http://www.gstatic.com/generate_204`600
-custom_proxy_group=日本0.5x`url-test`日本B`http://www.gstatic.com/generate_204`600
 custom_proxy_group=美国`url-test`美|洛杉矶|硅谷|达拉斯|费利蒙|凤凰城|芝加哥|圣何塞|西雅图`http://www.gstatic.com/generate_204`600
-custom_proxy_group=Game`url-test`Limit`http://www.gstatic.com/generate_204`600
+custom_proxy_group=特殊节点`url-test`土耳其|阿根廷|韩国|巴西|家宽`http://www.gstatic.com/generate_204`600
+
+
 
 ruleset=DIRECT,https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Special.list
 ruleset=!!import:https://gist.githubusercontent.com/vernesong/4c27ed54ab2a5fedd9c4011389ac11ed/raw/lhie1_globaltv.list
