--- a/rule/Clash/ywh2.ini
+++ b/rule/Clash/ywh2.ini
@@ -31,11 +31,11 @@ ruleset=DIRECT,https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surg
 ruleset=Apple TV,https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/Apple%20Music.list
 ruleset=Apple TV,https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/Apple%20News.list
 ruleset=Apple TV,https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/Apple%20TV.list
-ruleset=国际媒体,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GlobalMedia/GlobalMedia_Classical.list
+ruleset=国际媒体,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GlobalMedia/GlobalMedia.list
 ruleset=Apple,https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Apple.list
 ruleset=Bing,https://gcore.jsdelivr.net/gh/fourseuu/ios_rule_script/rule/Clash/Bing/Bing.list
 ruleset=Microsoft,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Microsoft/Microsoft.list
-ruleset=Spotify, https://gcore.jsdelivr.net/gh/blackmatrix7/ios_rule_script/rule/Clash/Spotify/Spotify.list
+ruleset=Spotify,https://gcore.jsdelivr.net/gh/blackmatrix7/ios_rule_script/rule/Clash/Spotify/Spotify.list
 ruleset=树状图,https://raw.githubusercontent.com/fourseuu/ios_rule_script/master/rule/Clash/tree.list
 ruleset=Pikpak,https://raw.githubusercontent.com/fourseuu/ios_rule_script/master/rule/Surge/PikPak/PikPak.list
 ruleset=雀魂,https://gcore.jsdelivr.net/gh/blackmatrix7/ios_rule_script/rule/Clash/Majsoul/Majsoul.list
@@ -44,7 +44,7 @@ ruleset=Bilibili,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master
 ruleset=ChatGPT,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/OpenAI/OpenAI.list
 ruleset=Google,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Google/Google.list
 ruleset=电报消息,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Telegram/Telegram.list
-ruleset=推特服务,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Twitter/Twitterlist
+ruleset=推特服务,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Twitter/Twitter.list
 ruleset=全球加速,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GitHub/GitHub.list
 ruleset=全球加速,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/ProxyLite/ProxyLite.list
 ruleset=国内网站,https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Domestic.list
